--- a/data/styles.css
+++ b/data/styles.css
@@ -11,6 +11,10 @@
 }
 .box_2 {
 }
+.box_3 {
+}
+._形状 {
+}
 .image {
 }
 .button {
@@ -65,6 +69,8 @@
 }
 ._文本段落 {
   text-align:left;
+}
+.line {
 }
 .text_field {
   color:#000000;
