--- a/files/index/styles.css
+++ b/files/index/styles.css
@@ -83,10 +83,6 @@
   height:31px;
   color:#FFFFFF;
 }
-#u2_img.selected {
-}
-#u2.selected {
-}
 #u2_text {
   border-width:0px;
   position:absolute;
@@ -112,10 +108,6 @@
   height:31px;
   color:#FFFFFF;
 }
-#u3_img.selected {
-}
-#u3.selected {
-}
 #u3_text {
   border-width:0px;
   position:absolute;
@@ -140,10 +132,6 @@
   width:48px;
   height:31px;
   color:#FFFFFF;
-}
-#u4_img.selected {
-}
-#u4.selected {
 }
 #u4_text {
   border-width:0px;
@@ -269,10 +257,6 @@
   height:31px;
   color:#FFFFFF;
 }
-#u9_img.selected {
-}
-#u9.selected {
-}
 #u9_text {
   border-width:0px;
   position:absolute;
@@ -297,10 +281,6 @@
   width:86px;
   height:31px;
   color:#FFFFFF;
-}
-#u10_img.selected {
-}
-#u10.selected {
 }
 #u10_text {
   border-width:0px;
@@ -500,28 +480,156 @@
   width:1px;
   height:1px;
 }
-#u18 {
+#u18_img {
   border-width:0px;
-  position:absolute;
-  left:94px;
-  top:401px;
-  width:84px;
-  height:25px;
-}
-#u18_input {
   position:absolute;
   left:0px;
   top:0px;
-  width:84px;
-  height:25px;
-  background-color:transparent;
-  font-family:'Arial Normal', 'Arial';
-  font-weight:400;
-  font-style:normal;
-  font-size:13px;
-  text-decoration:none;
-  color:#000000;
-  text-align:left;
-  border-color:transparent;
-  outline-style:none;
+  width:61px;
+  height:2px;
+}
+#u18 {
+  border-width:0px;
+  position:absolute;
+  left:121px;
+  top:150px;
+  width:60px;
+  height:1px;
+  font-size:20px;
+}
+#u18_text {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:-11px;
+  width:56px;
+  word-wrap:break-word;
+}
+#u19_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:167px;
+  height:42px;
+}
+#u19 {
+  border-width:0px;
+  position:absolute;
+  left:144px;
+  top:540px;
+  width:166px;
+  height:41px;
+  font-size:16px;
+  color:#FFFFFF;
+}
+#u19_text {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:11px;
+  width:162px;
+  word-wrap:break-word;
+}
+#u20 {
+  border-width:0px;
+  position:absolute;
+  left:144px;
+  top:581px;
+  width:167px;
+  height:222px;
+  overflow:hidden;
+}
+#u20_state0 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:167px;
+  height:222px;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
+  background-image:none;
+}
+#u20_state0_content {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u21_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:200px;
+  height:252px;
+}
+#u21 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:200px;
+  height:252px;
+}
+#u21_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u20_state1 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:167px;
+  height:222px;
+  visibility:hidden;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
+  background-image:none;
+}
+#u20_state1_content {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u22_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:204px;
+  height:250px;
+}
+#u22 {
+  border-width:0px;
+  position:absolute;
+  left:-5px;
+  top:0px;
+  width:204px;
+  height:250px;
+}
+#u22_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
 }
